# move-the-sheriff

./: .gitignore  Cargo.toml  Dockerfile  README.md  actor.js  index.js  moveTheSheriff.js  moveTheSherrif.js  package-lock.json  package.json  start.js
.github/workflows/: rust.yml  tui.yml
libsheriff/: Cargo.toml
libsheriff/src/: lib.rs
libsheriff/tests/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: engine.rs  main.rs
src/engine/: draw.rs  input.rs  mod.rs  state.rs
tui/: .dockerignore  Cargo.toml  README.md
tui/src/: engine.rs  main.rs
