[package]
name = "libsheriff"
version = "1.0.0"
authors = ["Austin Pray <austin@austinpray.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
rand = "0.7.3"
indoc = "0.3"
unicode-width = "0.1.7"
